--- a/resources/css/mobile-app.scss
+++ b/resources/css/mobile-app.scss
@@ -334,12 +334,13 @@ main {
         font-size: 2rem;
         font-weight: 600;
         margin: 0;
-                //word-break: break-all;
-                hyphens:auto;
-                -webkit-hyphens:auto;
-                -moz-hyphens:auto;
-                -ms-hyphens:auto;
-                -webkit-hyphens:auto;
+        overflow-wrap: break-word;
+        //word-break: break-all;
+        hyphens:auto;
+        -webkit-hyphens:auto;
+        -moz-hyphens:auto;
+        -ms-hyphens:auto;
+        -webkit-hyphens:auto;
     }
     .quoteCard-author {
         font-size: 1.3rem;
@@ -490,6 +491,7 @@ main form {
         font-weight: 400;
         position: relative;
         display: block;
+        overflow-wrap: break-word;
         //word-break: break-all;
         hyphens:auto;
         -webkit-hyphens:auto;
